--- a/notebooks/03_playlist_analysis.ipynb
+++ b/notebooks/03_playlist_analysis.ipynb
@@ -1364,7 +1364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
