refactor: rename project to spotim8 for consistency
- Remove redundant AJSpotim8/ directory (duplicate of web app)
- Rename spotifyframes/ Python package to spotim8/
- Rename spotim8/ React app to web/
- Update all imports and references to spotim8
- Update pyproject.toml with spotim8 naming
- Update CLI command from spotifyframes to spotim8
- Remove personal name references from public files
- Keep personalization via environment variables only
- Clean up spotifyframes.egg-info and __pycache__

--- a/notebooks/01_sync_data.ipynb
+++ b/notebooks/01_sync_data.ipynb
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u2705 Project root: /Users/aryamaan/Desktop/Projects/spotifyframes_repo\n"
+      "\u2705 Project root: /Users/aryamaan/Desktop/Projects/spotim8_repo\n"
      ]
     }
    ],
@@ -107,28 +107,28 @@
      "output_type": "stream",
      "text": [
       "\u2705 Connected to Spotify!\n",
-      "\ud83d\udcc1 Data will be saved to: /Users/aryamaan/Desktop/Projects/spotifyframes_repo/data\n"
+      "\ud83d\udcc1 Data will be saved to: /Users/aryamaan/Desktop/Projects/spotim8_repo/data\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/aryamaan/Desktop/Projects/spotifyframes_repo/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "/Users/aryamaan/Desktop/Projects/spotim8_repo/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "from spotifyframes import SpotifyFrames\n",
-    "from spotifyframes.catalog import CacheConfig\n",
+    "from spotim8 import Spotim8\n",
+    "from spotim8.catalog import CacheConfig\n",
     "\n",
     "# Data directory (stores downloaded data)\n",
     "DATA_DIR = PROJECT_ROOT / \"data\"\n",
     "DATA_DIR.mkdir(exist_ok=True)\n",
     "\n",
     "# Initialize client with caching\n",
-    "sf = SpotifyFrames.from_env(\n",
+    "sf = Spotim8.from_env(\n",
     "    progress=True,\n",
     "    cache=CacheConfig(dir=DATA_DIR)\n",
     ")\n",
@@ -246,7 +246,7 @@
       "==================================================\n",
       "        SPOTIFYFRAMES DATA STATUS\n",
       "==================================================\n",
-      "\ud83d\udcc1 Cache directory: /Users/aryamaan/Desktop/Projects/spotifyframes_repo/data\n",
+      "\ud83d\udcc1 Cache directory: /Users/aryamaan/Desktop/Projects/spotim8_repo/data\n",
       "\ud83d\udc64 User: 31iol2qamank24owygxo7kpq533y\n",
       "\ud83d\udd50 Last sync: 2025-12-19T01:17:45.099294+00:00\n",
       "\n",
@@ -1133,7 +1133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\ud83d\udcc1 Files in /Users/aryamaan/Desktop/Projects/spotifyframes_repo/data:\n",
+      "\ud83d\udcc1 Files in /Users/aryamaan/Desktop/Projects/spotim8_repo/data:\n",
       "\n",
       "   artists.parquet                   196.2 KB\n",
       "   library_wide.parquet             1644.4 KB\n",
