Clean up project: consolidate docs, remove redundancy
- Consolidate all documentation into single README.md
- Remove redundant documentation files (SETUP.md, API_SETUP.md, CONTRIBUTING.md, SECURITY.md)
- Remove redundant requirements.txt (dependencies now in pyproject.toml)
- Replace shell scripts with Python equivalents (run_sync_local.py, setup_local.py)
- Update all code references to point to README.md
- Add python-dotenv to pyproject.toml dependencies
- Update .gitignore to exclude user-specific data files

--- a/notebooks/03_playlist_analysis.ipynb
+++ b/notebooks/03_playlist_analysis.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     "\n",
     "# Exclude special playlists from analysis\n",
     "EXCLUDE_LIKED_SONGS = True    # Set True to exclude Liked Songs master playlist\n",
-    "EXCLUDE_MONTHLY = True        # Set True to exclude monthly playlists (Jan'25, etc.)\n",
+    "EXCLUDE_MONTHLY = False        # Set True to exclude monthly playlists (Jan'25, etc.)\n",
     "\n",
     "# Analyze only specific playlists by name (leave empty [] for all owned playlists)\n",
     "INCLUDE_ONLY_PLAYLISTS = []\n",
