--- a/notebooks/04_liked_songs_monthly_playlists.ipynb
+++ b/notebooks/04_liked_songs_monthly_playlists.ipynb
@@ -6,20 +6,22 @@
    "source": [
     "# 🎵 Split Liked Songs into Monthly & Genre Playlists\n",
     "\n",
-    "Create **monthly playlists**, **genre-split playlists**, and **top played playlists** from your Spotify data.\n",
+    "Create **monthly playlists**, **genre-split playlists**, and **master genre playlists** from your Spotify data.\n",
     "\n",
     "**Prerequisites:** Run `01_sync_data.ipynb` first to download your library.\n",
     "\n",
     "**This notebook creates:**\n",
     "- 📅 Monthly playlists (e.g., \"AJFindsDec25\")\n",
     "- 🎸 Genre-split monthly playlists:\n",
-    "  - `AJFindsHipHopDec25` - Hip Hop / Rap tracks\n",
-    "  - `AJFindsDanceDec25` - Dance / Electronic / EDM tracks  \n",
-    "  - `AJFindsOtherDec25` - All other genres (Pop, Rock, Indie, R&B, etc.)\n",
-    "- 🎵 Optional: Master genre playlists (all-time, broken down by broad genre)\n",
-    "- 🎧 **NEW:** Most Listened monthly playlists (e.g., \"AJTopDec25\") - requires streaming history export\n",
+    "  - `HipHopFindsDec25` - Hip Hop / Rap tracks\n",
+    "  - `DanceFindsDec25` - Dance / Electronic / EDM tracks  \n",
+    "  - `OtherFindsDec25` - All other genres (Pop, Rock, Indie, R&B, etc.)\n",
+    "- 🎵 Master genre playlists (all-time, broken down by broad genre, e.g., \"AJamHip-Hop\")\n",
+    "- 📅 **Automatic consolidation:** Monthly playlists older than 2 years are automatically consolidated into yearly playlists (e.g., \"AJFinds2023\") by the daily sync script\n",
     "\n",
-    "**Note:** The sum of HipHop + Dance + Other = total monthly playlist tracks"
+    "**Note:** The sum of HipHop + Dance + Other = total monthly playlist tracks\n",
+    "\n",
+    "**💡 Tip:** For automated daily updates, use `scripts/spotify_sync.py` instead of this notebook (configured via cron job)."
    ]
   },
   {
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +169,7 @@
    ],
    "source": [
     "# Install dependencies\n",
-    "%pip install -q pandas pyarrow tqdm spotipy\n",
+    "%pip install -q pandas pyarrow tqdm spotipy python-dotenv\n",
     "\n",
     "# Add project to path\n",
     "import sys\n",
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,16 +223,25 @@
     "# Connect to Spotify (required for creating playlists)\n",
     "try:\n",
     "    sf\n",
-    "    print(\"✅ Found existing AJsSpotim8 connection.\")\n",
+    "    print(\"✅ Found existing Spotim8 connection.\")\n",
     "except NameError:\n",
     "    try:\n",
     "        from spotim8 import Spotim8\n",
     "        from spotim8.catalog import CacheConfig\n",
+    "        from dotenv import load_dotenv\n",
     "        \n",
-    "        # Set credentials (update these!)\n",
-    "        os.environ.setdefault(\"SPOTIPY_CLIENT_ID\", \"YOUR_CLIENT_ID\")\n",
-    "        os.environ.setdefault(\"SPOTIPY_CLIENT_SECRET\", \"YOUR_CLIENT_SECRET\")\n",
-    "        os.environ.setdefault(\"SPOTIPY_REDIRECT_URI\", \"http://127.0.0.1:8888/callback\")\n",
+    "        # Load credentials from .env file (recommended)\n",
+    "        env_path = PROJECT_ROOT / \".env\"\n",
+    "        if env_path.exists():\n",
+    "            load_dotenv(env_path)\n",
+    "            print(f\"✅ Loaded credentials from {env_path}\")\n",
+    "        else:\n",
+    "            print(f\"⚠️  No .env file found at {env_path}\")\n",
+    "            print(\"   Create one with SPOTIPY_CLIENT_ID, SPOTIPY_CLIENT_SECRET, SPOTIPY_REDIRECT_URI\")\n",
+    "            print(\"   See README.md for setup instructions\")\n",
+    "            # Fallback to environment variables if .env doesn't exist\n",
+    "            if not os.environ.get(\"SPOTIPY_CLIENT_ID\"):\n",
+    "                print(\"   ❌ SPOTIPY_CLIENT_ID not set in environment\")\n",
     "        \n",
     "        DATA_DIR.mkdir(exist_ok=True)\n",
     "        sf = Spotim8.from_env(progress=True, cache=CacheConfig(dir=DATA_DIR))\n",
@@ -238,6 +249,7 @@
     "    except Exception as e:\n",
     "        print(f\"⚠️ Could not connect to Spotify: {e}\")\n",
     "        print(\"   Playlist creation will be disabled, but you can still preview.\")\n",
+    "        print(\"   See README.md for credential setup instructions.\")\n",
     "        sf = None"
    ]
   },
